<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/btn_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scale" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scale_ratio" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crop_effect" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotate_effect_CW" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotate_effect_CCW" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skew_effect" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/image_container"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btn_container"
        android:layout_toEndOf="@id/btn_container"
        android:orientation="vertical"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="原图"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/origin_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="origin_image" />

        <TextView
            android:id="@+id/effect_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="效果图"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/effect_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
